--- a/shop-web-app/Views/Product/Index.cshtml
+++ b/shop-web-app/Views/Product/Index.cshtml
@@ -48,9 +48,18 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             @foreach(var item in Model)
             {
+                string url;
+                try
+                {
+                    url = item.ProductVariants.ElementAtOrDefault(0).Photos.ElementAtOrDefault(0).PhotoUrl;
+                }
+                catch(Exception ex)
+                {
+                    url = "https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png";
+                }
                 <div class="col">
                     <div class="card shadow-sm" style="border-radius: 4px 20px 20px 20px;">
-                        <img src=@item.ProductVariants.ElementAtOrDefault(0).Photos.ElementAtOrDefault(0).PhotoUrl alt="Obraz przedstawiający @item.Name" width=100% height=255 style="border-radius: 4px 20px 4px 4px" />
+                        <img src=@url alt="Obraz przedstawiający @item.Name" width=100% height=255 style="border-radius: 4px 20px 4px 4px" />
                         <div class="overlay-category" style="position: absolute; top: 0; left: 0; width: 30%; background-color: rgba(0, 0, 0, 0.3); color: white; padding: 5px; text-align: center; border-radius: 4px;">
                             @item.Gender.ToFriendlyString() / @item.SubCategory.ToFriendlyString()
                         </div>
