--- a/shop-web-app/Views/Product/Index.cshtml
+++ b/shop-web-app/Views/Product/Index.cshtml
@@ -32,11 +32,11 @@
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">SIEMA</h1>
-                <p class="lead text-body-secondary">Lalalalaa</p>
+                <h1 class="fw-light">Wybieraj tylko z tego co najlepsze</h1>
+                <p class="lead text-body-secondary">Lorem ipsum</p>
                 <p>  <!-- TU PRZYCISKI z GÓRY -->
-                    <a href="#" class="btn btn-primary my-2">Świat według kiepskich</a>
-                    <a href="#" class="btn btn-secondary my-2">Czemu oni piszą od tyłu.</a>
+                    <a href="#" class="btn btn-primary my-2">Dolor sit amet</a>
+                    <a href="#" class="btn btn-secondary my-2">Ameno interimo atapare</a>
                 </p>
             </div>
         </div>
