--- a/shop-web-app/Views/Account/Login.cshtml
+++ b/shop-web-app/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Logowanie";
 }
 @model LoginViewModel
 
