--- a/shop-web-app/Views/Product/Index.cshtml
+++ b/shop-web-app/Views/Product/Index.cshtml
@@ -34,10 +34,16 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Wybieraj tylko z tego co najlepsze</h1>
                 <p class="lead text-body-secondary">Lorem ipsum</p>
-                <p>  <!-- TU PRZYCISKI z GÓRY -->
-                    <a href="#" class="btn btn-primary my-2">Dolor sit amet</a>
-                    <a href="#" class="btn btn-secondary my-2">Ameno interimo atapare</a>
-                </p>
+     
+                @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                {
+                    <p>
+                        <a type="button" asp-controller="Product" asp-action="Create" class="btn btn-primary my-2" style="font-size: 20px;">
+                            Dodaj nowy produkt
+                        </a>
+                    </p>
+                }
+
             </div>
         </div>
     </section>
@@ -68,7 +74,10 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <a type="button" asp-controller="Product" asp-action="Details" asp-route-id=@item.Id class="btn btn-sm btn-outline-secondary">Szczegóły</a>
-                                    <a type="button" asp-controller="Product" asp-action="Edit" asp-route-id=@item.Id class="btn btn-sm btn-outline-secondary">Edytuj</a>
+                                    @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                                    {
+                                        <a type="button" asp-controller="Product" asp-action="Edit" asp-route-id=@item.Id class="btn btn-sm btn-outline-secondary">Edytuj</a>
+                                    }
                                 </div>
                                 <p class="text-body-secondary" style="font-size: 20px">@item.Price PLN</p>
                             </div>
