--- a/shop-web-app/Views/Shared/_Layout.cshtml
+++ b/shop-web-app/Views/Shared/_Layout.cshtml
@@ -71,6 +71,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/CreateHelper.js"></script>
+    <script src="~/js/ProductDetailsHelper.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
