--- a/shop-web-app/wwwroot/css/site.css
+++ b/shop-web-app/wwwroot/css/site.css
@@ -31,6 +31,18 @@ body {
     margin: 0;
 }
 
+.img-container {
+    width: 156px; /* Ustal szerokoœæ */
+    height: 170px; /* Ustal wysokoœæ, aby uzyskaæ proporcje 1:1 */
+    overflow: hidden; /* Ukrywa nadmiar */
+}
+
+.img-container img {
+    width: 100%;
+    height: 100%; /* Wymusza wysokoœæ dopasowan¹ do kontenera */
+    object-fit: cover;
+}
+
 main {
     flex: 1;
 }
